# stocklens

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: ai_review.py  recommendations.py  sell_signals.py  stocks.py
backend/app/services/: ai_review.py  sell_signal.py  stock_data.py
backend/app/services/analysis/: base.py  engine.py
backend/app/services/analysis/strategies/: basic_technical.py  canslim.py  cup_with_handle.py
backend/tests/: test_api.py  test_canslim.py  test_engine.py  test_sell_signal.py
frontend/: .pnpmrc.json  package.json  pnpm-lock.yaml  prisma.config.ts  routeshot.config.json  vercel.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/0001_init/: migration.sql
frontend/src/: proxy.ts
frontend/src/__tests__/: subscription.test.ts
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(marketing)/: layout.tsx
frontend/src/app/expired/: page.tsx
frontend/src/components/: sell-signal-banner.tsx
frontend/src/components/charts/: ai-review-card.tsx  canslim-radar.tsx  score-bar.tsx
frontend/src/lib/: api-auth.ts  auth.ts  db.ts  email.ts  stripe.ts  subscription.ts
frontend/src/types/: next-auth.d.ts
(+20 files in other folders)
